correction mobile projet

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -145,6 +145,7 @@
 
     .projets{
         padding: 4%;
+        height: 63rem;
     }
 
     .hovereffect a.info {
